--- a/paper/references.bib
+++ b/paper/references.bib
@@ -2,73 +2,136 @@
 
 @Manual{citeR,
     title = {R: A Language and Environment for Statistical Computing},
-    author = {{R Core Team}},
+    author = {R Core Team},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
     year = {2023},
     url = {https://www.R-project.org/},
   }
   
-  
-@Article{thereferencecanbewhatever,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
-  
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
+
+@Article{tidyverse,
+  title = {Welcome to the {tidyverse}},
+  author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+  year = {2019},
+  journal = {Journal of Open Source Software},
+  volume = {4},
+  number = {43},
+  pages = {1686},
+  doi = {10.21105/joss.01686}
 }
 
-@Misc{rstanarm,
-    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
-  }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
-  }
-  
-  
-@Article{rohan,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
-  
+
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2016},
+  isbn = {978-3-319-24277-4},
+  url = {https://ggplot2.tidyverse.org}
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2022},
+  note = {R package version 1.0.10},
+  url = {https://CRAN.R-project.org/package=dplyr}
+}
+
+@Manual{readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 2.1.3},
+  url = {https://CRAN.R-project.org/package=readr}
+},
+
+@Manual{tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2022},
+  note = {R package version 3.1.8},
+  url = {https://CRAN.R-project.org/package=tibble}
+}
+
+@InCollection{knitr,
+  booktitle = {Implementing Reproducible Computational Research},
+  editor = {Victoria Stodden and Friedrich Leisch and Roger D. Peng},
+  title = {knitr: A Comprehensive Tool for Reproducible Research in {R}},
+  author = {Yihui Xie},
+  publisher = {Chapman and Hall/CRC},
+  year = {2014},
+  note = {ISBN 978-1466561595},
+  url = {http://www.crcpress.com/product/isbn/9781466561595}
+}
+
+@Manual{kableExtra,
+  title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
+  author = {Hao Zhu},
+  year = {2021},
+  note = {R package version 1.3.4},
+  url = {https://CRAN.R-project.org/package=kableExtra}
+}
+
+
+@Manual{janitor,
+  title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+  author = {Sam Firke},
+  year = {2021},
+  note = {R package version 2.1.0},
+  url = {https://CRAN.R-project.org/package=janitor}
+}
+
+@Manual{citeEquite,
+  title = {2023 Auto Theft Trend Report},
+  author = {Equite},
+  year = {2024},
+  url = {https://assets-global.website-files.com/614f811f9a079b223c5d23ab/65c12aa99124b66e078fe7d6_E%CC%81quite%CC%81%20Association%20-%202023%20Auto%20Theft%20Trend%20Report%20-%20EN.pdf}
+}
+
+@Manual{citeNational,
+  title = {Canada has become a very scary place to own a vehicle right now},
+  author = {National Post},
+  year = {2024},
+  url = {https://nationalpost.com/news/canada/canada-auto-theft-crisis}
+}
+
+@Manual{citeCTV,
+  title = {221 vehicles reported stolen in Ottawa so far in 2024: Here's the hot spots for vehicle thefts},
+  author = {Josh Pringle},
+  year = {2024},
+  url = {https://ottawa.ctvnews.ca/221-vehicles-reported-stolen-in-ottawa-so-far-in-2024-here-s-the-hot-spots-for-vehicle-thefts-1.6761505}
+}
+
+@Manual{citeEquite2,
+  title = {Reasons Why Vehicles are Stolen},
+  author = {Equite},
+  year = {2024},
+  url = {https://www.equiteassociation.com/educational-material/reasons-why-vehicles-are-stolen}
+}
+
+
+@Manual{citeCBC,
+  title = {A car was stolen every 40 minutes in Toronto last year, police chief says},
+  author = {CBC},
+  year = {2024},
+  url = {https://www.cbc.ca/news/canada/toronto/car-thefts-2023-toronto-figures-1.7147387}
+}
+
+@Manual{arrow,
+  title = {arrow: Integration to 'Apache' 'Arrow'},
+  author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
+  year = {2024},
+  note = {R package version 16.0.0, https://arrow.apache.org/docs/r/},
+  url = {https://github.com/apache/arrow/},
+}
+
+
+@Manual{citeOttawa,
+  title = {Theft of Motor Vehicle Open Data},
+  author = {Ottawa Police},
+  year = {2024},
+  url = {https://data.ottawapolice.ca/datasets/e5453a203e2a4baeac32ac4e70ce852c_0/about}
+}
+
