updated datasheet, references

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -133,3 +133,14 @@
   url = {https://data.ottawapolice.ca/datasets/e5453a203e2a4baeac32ac4e70ce852c_0/about}
 }
 
+@article{gebru2021datasheets,
+  title={Datasheets for datasets},
+  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
+  journal={Communications of the ACM},
+  volume={64},
+  number={12},
+  pages={86--92},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
+
